force-app/main/default/objects/Product2/fields/CAD_MAP_Price__c.field-meta.xml
<CustomField>
    <fullName>CAD_MAP_Price__c</fullName>
    <label>CAD MAP Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>