force-app/main/default/objects/Product2/fields/Catalogue_Sorting_Number__c.field-meta.xml
<CustomField>
    <fullName>Catalogue_Sorting_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Formerly known as Model Number</description>
    <inlineHelpText>This is formerly known as Model Number</inlineHelpText>
    <label>Catalog Sorting Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>