force-app/main/default/objects/Product2/fields/Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Origin__c</fullName>
    <inlineHelpText>Country of Origin comes from PLM</inlineHelpText>
    <label>Country of Origin</label>
    <length>40</length>
    <type>Text</type>
</CustomField>