force-app/main/default/objects/Product2/fields/KCPQ_Accessory_Item__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Accessory_Item__c</fullName>
    <label>Accessory Item</label>
    <length>3</length>
    <type>Text</type>
</CustomField>