force-app/main/default/objects/Product2/fields/KCPQ_Bulb_Type__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Bulb_Type__c</fullName>
    <label>Bulb Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>