force-app/main/default/objects/Product2/fields/KCPQ_CAD_MAP_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_CAD_MAP_Multiplier__c</fullName>
    <label>CAD MAP Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>