force-app/main/default/objects/Product2/fields/KCPQ_Catalog_Number__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Catalog_Number__c</fullName>
    <label>Catalog Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>