force-app/main/default/objects/Product2/fields/KCPQ_Class_CD__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Class_CD__c</fullName>
    <label>Product Tier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>