force-app/main/default/objects/Product2/fields/KCPQ_Commission_Pct__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Commission_Pct__c</fullName>
    <label>Commission Pct</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>