force-app/main/default/objects/Product2/fields/KCPQ_Current_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Current_Status_Date__c</fullName>
    <label>Current Status Date</label>
    <type>Date</type>
</CustomField>