force-app/main/default/objects/Product2/fields/KCPQ_Default_Sales_Discount_Group__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Default_Sales_Discount_Group__c</fullName>
    <label>Default Sales Discount Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEST7</fullName>
            </value>
            <value>
                <fullName>COST</fullName>
            </value>
            <value>
                <fullName>DISC</fullName>
            </value>
            <value>
                <fullName>DISC15</fullName>
            </value>
            <value>
                <fullName>DISC1FIX</fullName>
            </value>
            <value>
                <fullName>DISC2015</fullName>
            </value>
            <value>
                <fullName>DISC2016</fullName>
            </value>
            <value>
                <fullName>DISC25</fullName>
            </value>
            <value>
                <fullName>DISC2FIX</fullName>
            </value>
            <value>
                <fullName>DISC35</fullName>
            </value>
            <value>
                <fullName>DISC40</fullName>
            </value>
            <value>
                <fullName>DISC50</fullName>
            </value>
            <value>
                <fullName>DISC50_2</fullName>
            </value>
            <value>
                <fullName>DISC5017</fullName>
            </value>
            <value>
                <fullName>DISC60</fullName>
            </value>
            <value>
                <fullName>DISC70</fullName>
            </value>
            <value>
                <fullName>DISCFANS</fullName>
            </value>
            <value>
                <fullName>FAN20</fullName>
            </value>
            <value>
                <fullName>LAND50</fullName>
            </value>
            <value>
                <fullName>LAND60</fullName>
            </value>
            <value>
                <fullName>LIST</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>