force-app/main/default/objects/Product2/fields/KCPQ_Discontinue_Date__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Discontinue_Date__c</fullName>
    <label>Discontinue Date</label>
    <type>Date</type>
</CustomField>