force-app/main/default/objects/Product2/fields/KCPQ_EA_Unit_Size__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_EA_Unit_Size__c</fullName>
    <label>EA - Unit Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>