force-app/main/default/objects/Product2/fields/KCPQ_EE_Description__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_EE_Description__c</fullName>
    <label>EE Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>