force-app/main/default/objects/Product2/fields/KCPQ_Energy_Efficient__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Energy_Efficient__c</fullName>
    <label>Energy Efficient</label>
    <length>10</length>
    <type>Text</type>
</CustomField>