force-app/main/default/objects/Product2/fields/KCPQ_Finish_DELETE__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Finish_DELETE__c</fullName>
    <label>Finish_DELETE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Brushed Nickel</fullName>
            </value>
            <value>
                <fullName>Dore Bronze</fullName>
            </value>
            <value>
                <fullName>Antique Pewter</fullName>
            </value>
            <value>
                <fullName>Anvil Iron</fullName>
            </value>
            <value>
                <fullName>Brushed Pewter</fullName>
            </value>
            <value>
                <fullName>Canyon View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>