force-app/main/default/objects/Product2/fields/KCPQ_Future_Status__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Future_Status__c</fullName>
    <label>Future Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>