force-app/main/default/objects/Product2/fields/KCPQ_Future_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Future_Status_Date__c</fullName>
    <label>Future Status Date</label>
    <type>Date</type>
</CustomField>