force-app/main/default/objects/Product2/fields/KCPQ_Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Gross_Weight__c</fullName>
    <label>Gross Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>