force-app/main/default/objects/Product2/fields/KCPQ_Height__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Height__c</fullName>
    <label>Height</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>