force-app/main/default/objects/Product2/fields/KCPQ_Height_DELETED__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Height_DELETED__c</fullName>
    <label>Height_DELETED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>