force-app/main/default/objects/Product2/fields/KCPQ_IMAP_Multipler__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_IMAP_Multipler__c</fullName>
    <label>IMAP Multipler</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>