force-app/main/default/objects/Product2/fields/KCPQ_InteriorExterior__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_InteriorExterior__c</fullName>
    <label>Interior/Exterior</label>
    <length>100</length>
    <type>Text</type>
</CustomField>