force-app/main/default/objects/Product2/fields/KCPQ_InteriorExterior_DELETE__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_InteriorExterior_DELETE__c</fullName>
    <label>Interior/Exterior_DELETE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>