force-app/main/default/objects/Product2/fields/KCPQ_Latest_Cost__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Latest_Cost__c</fullName>
    <label>Latest Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>