force-app/main/default/objects/Product2/fields/KCPQ_LED__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_LED__c</fullName>
    <label>LED</label>
    <length>100</length>
    <type>Text</type>
</CustomField>