force-app/main/default/objects/Product2/fields/KCPQ_Length__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Length__c</fullName>
    <label>Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>