force-app/main/default/objects/Product2/fields/KCPQ_Light_Source__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Light_Source__c</fullName>
    <inlineHelpText>This is based on light source</inlineHelpText>
    <label>Light Source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>