force-app/main/default/objects/Product2/fields/KCPQ_MAC_Cost__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_MAC_Cost__c</fullName>
    <label>MAC Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>