force-app/main/default/objects/Product2/fields/KCPQ_MAP_Price__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_MAP_Price__c</fullName>
    <label>MAP Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>