force-app/main/default/objects/Product2/fields/KCPQ_Min_Order_Qty__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Min_Order_Qty__c</fullName>
    <label>Min Order Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>