force-app/main/default/objects/Product2/fields/KCPQ_MSRP__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_MSRP__c</fullName>
    <label>MSRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>