force-app/main/default/objects/Product2/fields/KCPQ_Net_Inventory_Available__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Net_Inventory_Available__c</fullName>
    <formula>KCPQ_Total_Available_Inventory__c  -  KCPQ_Total_Inventory_On_Hold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Inventory Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>