force-app/main/default/objects/Product2/fields/KCPQ_P21_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_P21_Product_Id__c</fullName>
    <externalId>true</externalId>
    <label>P21 Product Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>