force-app/main/default/objects/Product2/fields/KCPQ_Parent_Category__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Parent_Category__c</fullName>
    <label>Parent Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>