force-app/main/default/objects/Product2/fields/KCPQ_PL_Net_Weight__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_PL_Net_Weight__c</fullName>
    <label>PL - Net Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>