force-app/main/default/objects/Product2/fields/KCPQ_Pricing_Family__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Pricing_Family__c</fullName>
    <label>Pricing Family</label>
    <length>50</length>
    <type>Text</type>
</CustomField>