force-app/main/default/objects/Product2/fields/KCPQ_Product_Commission_Class__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Product_Commission_Class__c</fullName>
    <label>Product Commission Class</label>
    <length>8</length>
    <type>Text</type>
</CustomField>