force-app/main/default/objects/Product2/fields/KCPQ_Product_Finish_Code__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Product_Finish_Code__c</fullName>
    <label>Product Finish Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>