force-app/main/default/objects/Product2/fields/KCPQ_Product_Manager_DELETE__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Product_Manager_DELETE__c</fullName>
    <label>Product Manager_DELETE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>