force-app/main/default/objects/Product2/fields/KCPQ_Product_Status__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Product_Status__c</fullName>
    <label>Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
            <value>
                <fullName>To be Discontinued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>