force-app/main/default/objects/Product2/fields/KCPQ_Qty_Available__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Qty_Available__c</fullName>
    <label>Qty Available</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>