force-app/main/default/objects/Product2/fields/KCPQ_Quote_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Quote_Guidelines__c</fullName>
    <label>Quote Guidelines</label>
    <length>200</length>
    <type>Text</type>
</CustomField>