force-app/main/default/objects/Product2/fields/KCPQ_Quote_Usage__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Quote_Usage__c</fullName>
    <label>Quote Usage %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>