force-app/main/default/objects/Product2/fields/KCPQ_Sku_Net_Weight_DELETE__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Sku_Net_Weight_DELETE__c</fullName>
    <label>Sku Net Weight_DELETE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>