force-app/main/default/objects/Product2/fields/KCPQ_Sku_Volume__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Sku_Volume__c</fullName>
    <label>Sku Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>