force-app/main/default/objects/Product2/fields/KCPQ_SNTE_Price__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_SNTE_Price__c</fullName>
    <label>SNTE Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>