force-app/main/default/objects/Product2/fields/KCPQ_Total_Available_Inventory__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Total_Available_Inventory__c</fullName>
    <description>Total available based on inventory in DC location</description>
    <inlineHelpText>Total available based on inventory in DC location</inlineHelpText>
    <label>Total Available Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>