force-app/main/default/objects/Product2/fields/KCPQ_Total_Inventory_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Total_Inventory_On_Hold__c</fullName>
    <inlineHelpText>Total Inventory  which is On Hold</inlineHelpText>
    <label>Total Inventory On Hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>