force-app/main/default/objects/Product2/fields/KCPQ_UPC__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_UPC__c</fullName>
    <label>UPC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>