force-app/main/default/objects/Product2/fields/KCPQ_Value_Item_DELETE__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Value_Item_DELETE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Value Item_DELETE</label>
    <type>Checkbox</type>
</CustomField>