force-app/main/default/objects/Product2/fields/KCPQ_Width_DELETE__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Width_DELETE__c</fullName>
    <label>Width_DELETE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>