force-app/main/default/objects/Product2/fields/KCPQ_Zone_1_NS_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Zone_1_NS_Multiplier__c</fullName>
    <label>Zone 1 NS Multiplier</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>