force-app/main/default/objects/Product2/fields/KCPQ_Zone_1_Price_DN__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Zone_1_Price_DN__c</fullName>
    <label>Zone 1 Price (DN)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>