force-app/main/default/objects/Product2/fields/KCPQ_Zone_2_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Zone_2_Multiplier__c</fullName>
    <label>Zone 2 Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>