force-app/main/default/objects/Product2/fields/KCPQ_Zone_3_Price__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Zone_3_Price__c</fullName>
    <label>Zone 3 Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>