force-app/main/default/objects/Product2/fields/PDLM__Item_Revision_Updated__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Item_Revision_Updated__c</fullName>
    <label>Item Revision Updated</label>
    <type>DateTime</type>
</CustomField>