force-app/main/default/objects/Product2/fields/Price_Sheet_Headers__c.field-meta.xml
<CustomField>
    <fullName>Price_Sheet_Headers__c</fullName>
    <inlineHelpText>Pricing Price sheet headers</inlineHelpText>
    <label>Price Sheet Headers</label>
    <length>50</length>
    <type>Text</type>
</CustomField>