force-app/main/default/objects/Product2/fields/SBQQ_Accounting_Group__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Accounting_Group__c</fullName>
    <label>Accounting Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>