force-app/main/default/objects/Product2/fields/SBQQ_Accounting_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Accounting_Group_Description__c</fullName>
    <label>Accounting Group Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>