force-app/main/default/objects/Product2/fields/SBQQ_Bulb_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Bulb_Type_Description__c</fullName>
    <label>Bulb Type Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>