force-app/main/default/objects/Product2/fields/SBQQ_Catalog_Description__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Catalog_Description__c</fullName>
    <label>Catalog Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>