force-app/main/default/objects/Product2/fields/SBQQ_Commodity_Product__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Commodity_Product__c</fullName>
    <label>Commodity Product</label>
    <length>10</length>
    <type>Text</type>
</CustomField>