force-app/main/default/objects/Product2/fields/SBQQ_Family_Description__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Family_Description__c</fullName>
    <label>Family Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>