force-app/main/default/objects/Product2/fields/SBQQ_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Product_Category__c</fullName>
    <label>Product Category</label>
    <length>10</length>
    <type>Text</type>
</CustomField>