force-app/main/default/objects/Product2/fields/SBQQ_Product_Style__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Product_Style__c</fullName>
    <label>Product Style</label>
    <length>10</length>
    <type>Text</type>
</CustomField>