force-app/main/default/objects/Product2/fields/SBQQ_Style_Description__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Style_Description__c</fullName>
    <label>Style Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>