force-app/main/default/objects/Product2/fields/UPC__c.field-meta.xml
<CustomField>
    <fullName>UPC__c</fullName>
    <label>UPC1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>