force-app/main/default/objects/Product2/fields/Zone_Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>Zone_Price_Formula__c</fullName>
    <description>Formula field for Flow &quot;Calculate Zone Prices on Product&quot;</description>
    <formula>KCPQ_Zone_1_Price_DN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone Price Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>