force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>KCPQ_Pricing_Family__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>KCPQ_First_Cost__c</columns>
    <columns>KCPQ_Commission_Pct__c</columns>
    <columns>KCPQ_Zone_1_Price_DN__c</columns>
    <columns>KCPQ_Zone_1_NS_Price__c</columns>
    <columns>KCPQ_Zone_2_NS_Price__c</columns>
    <columns>KCPQ_Zone_2_Price__c</columns>
    <columns>KCPQ_Zone_3_Price__c</columns>
    <columns>KCPQ_Zone_4_NS_Price__c</columns>
    <columns>KCPQ_Zone_4_Price__c</columns>
    <columns>KCPQ_Zone_12_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>