force-app/main/default/objects/Product2/listViews/RLM_Products.listView-meta.xml
<ListView>
    <fullName>RLM_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>SBQQ__ConfigurationType__c</columns>
    <columns>SBQQ_Product_Catalog__c</columns>
    <columns>SBQQ_Catalog_Description__c</columns>
    <columns>KCPQ_Zone_1_Price_DN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>5_RLM_KICH</value>
    </filters>
    <label>RLM Products</label>
</ListView>